--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <!--Home Screen Photo-->
         <div class = "center">
-            <img alt ="ambient coding" src="../static/images/ambient_coding.jpg" width = "80%" height = "80%">
+            <img alt ="ambient coding" src="ambient_coding.jpg" width = "80%" height = "80%">
         </div>
         <div>
             <hr class="solid">
