--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href = "../static/styles.css" rel = "stylesheet">
+        <link href = "styles.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
     </head>
@@ -51,7 +51,7 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
-                            <img src='../static/images/BC_Selfie.jpg'  alt="" class="container_img"/>
+                            <img src='BC_Selfie.jpg'  alt="" class="container_img"/>
                         </div>
                     </div>
                 </li>
@@ -59,7 +59,7 @@
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <img src='../static/images/australia.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -90,14 +90,14 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <img src='../static/images/aerok.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
                 </li>
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <img src='../static/images/cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -112,8 +112,8 @@
                             </div>
                         </div>
                         <div class="container_content">
-                            <img src='../static/images/piano.jpg'  alt="" class="container_img picture_resize"/>
-                            <img src='../static/images/theatre.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='piano.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='theatre.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
                 </li>
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <img src='../static/images/jamie_ari.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='jamie_ari.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
                 </li>
