--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit?
+                                        Welcome! My name is Justin Park and I am a Sophomore at Boston College studying Computer Science.
                                     </p>
                                 </div>
                             </div>
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit?
+                                        I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks: Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python. I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.
                                     </p>
                                 </div>
                             </div>
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit?
+                                        I have several hobbies ranging from aerok gym tv show (kdrama anime) games meeting friends signing in the shower
                                     </p>
                                 </div>
                             </div>
