--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Welcome! My name is Justin Park and I am a Sophomore at Boston College studying Computer Science.
+                                        My name is Justin Park and I am a Sophomore at Boston College studying Computer Science.
                                     </p>
                                 </div>
                             </div>
@@ -68,7 +68,11 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks: Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python. I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.
+                                        <div>I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks:</div>
+                                        <table>
+                                            <td><Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python./td>
+                                            <td>I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.</td>
+                                        </table>
                                     </p>
                                 </div>
                             </div>
@@ -84,7 +88,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        I have several hobbies ranging from aerok gym tv show (kdrama anime) games meeting friends signing in the shower
+                                        In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Vincenzo and Saiki K), play games of all kinds, and sing in the shower.
                                     </p>
                                 </div>
                             </div>
@@ -106,7 +110,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit?
+                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
                                     </p>
                                 </div>
                             </div>
