--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit?
+                                        Personal Project/Prototype (2.2.2021,2.25.2021)- Inspired by my love of tetris and my friend Noah Yim, I embarked on creating a Tetris program with a layout as close to the real program as possible. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. •	This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris.  
                                     </p>
                                 </div>
                             </div>
