--- a/profile.html
+++ b/profile.html
@@ -70,7 +70,7 @@
                                     <p class="p">
                                         <div>I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks:</div>
                                         <table>
-                                            <td><Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python./td>
+                                            <td>Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python.</td>
                                             <td>I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.</td>
                                         </table>
                                     </p>
