--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit?
+                                        Personal Project (1.5.2021,1.17.2021)- The very first interative Python program I created as a part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python, and has basic directional inputs, and a bonus file reader which saves high scores.
                                     </p>
                                 </div>
                             </div>
