--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,8 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Personal Project/Prototype (2.2.2021,2.25.2021)- Inspired by my love of tetris and my friend Noah Yim. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris.  
+                                        <div class="p font-weight: bold;>Personal Project/Prototype (2.2.2021,2.25.2021)- </div>
+                                        <div class="p">Inspired by my love of tetris and my friend Noah Yim. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris.<div> 
                                     </p>
                                 </div>
                             </div>
@@ -90,7 +91,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Personal Project (1.5.2021,1.17.2021)- The very first interative Python program I created as a part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python, and has basic directional inputs, and a bonus file reader which saves high scores.
+                                        Personal Project (1.5.2021,1.17.2021)- The very first interative Python program I created as a part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python, has basic directional inputs, and a bonus file reader which saves high scores.
                                     </p>
                                 </div>
                             </div>
