--- a/profile.html
+++ b/profile.html
@@ -68,10 +68,10 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <div>I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks:</div>
+                                        <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks:</div>
                                         <table>
-                                            <td>Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python.</td>
-                                            <td>I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.</td>
+                                            <td class="p">Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python.</td>
+                                            <td class="p">I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.</td>
                                         </table>
                                     </p>
                                 </div>
