--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit?
+                                        <b>Personal Project/Prototype (4.16.2021,2.25.2021)-</b>The webpage that you are looking at right now is my first project in HTML, CSS, (although not) JavaScript project. It uses the languages stated before, most of which was learned from viewing necessary portions of Harvard's cs50 class.
                                     </p>
                                 </div>
                             </div>
