--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,107 @@
             <!--Scroll Snap Start-->
             <div class="parent">
                 <!--First element within scroll snap-->
+
                 <li class="snap">
                     <!--Individual containers within each scroll snap element with transition style classes-->
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">ConnecD!ng</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <b>Personal Project/Prototype (2.2.2021,2.25.2021)-</b>Inspired by my love of tetris and my friend Noah Yim. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris. 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Image-->
+                        <div class="container_outer_img">
+                            <video width="500" autoplay loop>
+                                <source src="tetris.mp4" type="video/mp4">
+                                Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
+                            </video>
+                        </div>
+                    </div>
+                </li>
+
+                <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <video width="500" autoplay loop>
+                                <source src="pong.mp4" type="video/mp4">
+                                Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
+                            </video>
+                        </div>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">ConnecD!ng2</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <b>Personal Project (1.20.2021,2.2.2021)- </b>Preceded the tetris program, this is one of the programs I coded as part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python. Some of the functionalities of this program is the ball bouncing at consistent angles, except for when it hits the edge of a paddle, and a paddle AI, which follows the ball at a delayed speed.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="snap">
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">RPCA</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <b>Personal Project/Prototype (2.2.2021,2.25.2021)-</b>Inspired by my love of tetris and my friend Noah Yim. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris. 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Image-->
+                        <div class="container_outer_img">
+                            <video width="500" autoplay loop>
+                                <source src="RPCA.mp4" type="video/mp4">
+                                Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
+                            </video>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <video width="500" autoplay loop>
+                                <source src="pong.mp4" type="video/mp4">
+                                Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
+                            </video>
+                        </div>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">AAO</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <b>Personal Project (1.20.2021,2.2.2021)- </b>Preceded the tetris program, this is one of the programs I coded as part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python. Some of the functionalities of this program is the ball bouncing at consistent angles, except for when it hits the edge of a paddle, and a paddle AI, which follows the ball at a delayed speed.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li class="snap">
                     <div class= 'container'>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -58,7 +157,6 @@
                         </div>
                     </div>
                 </li>
-                <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
