--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
                             <div class="container_content_inner">
                                 <!--Title with text-->
                                 <div class="hide_title">
-                                    <h1 class = "title">About Me ee</h1>
+                                    <h1 class = "title">About Me</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
