--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                         <!--Image-->
                         <div class="container_outer_img">
                             <video width="500" autoplay loop>
-                                <source src="tetris.mp4" type="video/mp4">
+                                <source src="connecddinghome.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -65,7 +65,7 @@
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <video width="500" autoplay loop>
-                                <source src="pong.mp4" type="video/mp4">
+                                <source src="connecdingapp.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
@@ -113,7 +113,7 @@
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <video width="500" autoplay loop>
-                                <source src="pong.mp4" type="video/mp4">
+                                <source src="AAO.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
