--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
                     <!--Links to navigate through the different webpages-->
                     <td class = links><a class = nav href="profile.html">Profile</a></td>
                     <td class = links><a class = nav href="projects.html">Projects</a></td>
-                    <td class = links><a class = nav href="professionalexperience.html">Professional Experience</a></td>
+                    <td class = links><a class = nav href="workexperience.html">WorkExperience</a></td>
                 </tr>
             </table>
         </div>
