--- a/profile.html
+++ b/profile.html
@@ -23,8 +23,8 @@
                 <tr>
                     <!--Links to navigate through the different webpages-->
                     <td class = links><a class = nav href="profile.html">Profile</a></td>
-                    <td class = links><a class = nav href="projects.html">Projects</a></td>
                     <td class = links><a class = nav href="workexperience.html">WorkExperience</a></td>
+                    <td class = links><a class = nav href="projects.html">Projects</a></td>
                 </tr>
             </table>
         </div>
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        My name is Justin Park and I am a Sophomore at Boston College studying Computer Science.
+                                        My name is Justin Park and I am a Junior at Boston College studying Computer Science.
                                     </p>
                                 </div>
                             </div>
@@ -69,7 +69,7 @@
                                 <div class="hide_p">
                                     <p class="p">
                                         <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks:</div>
-                                        <div class="p" width="25">Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Harvard’s cs50, and Udemy’s 100 days of Python.</div>
+                                        <div class="p" width="25">Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)</div>
                                         <div class="p">I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.</div>
                                     </p>
                                 </div>
