update work experience

--- a/workexperience.html
+++ b/workexperience.html
@@ -29,9 +29,55 @@
             </table>
         </div>
         <!--Text-->
-        <div class=research>
-            This page is currently empty as I do not have research experience. However, this page exists as I have plans to participate in research oppertunities in the near future.
-        </div>
+<!--Insert line break-->
+            <hr class="solid">
+            <!--Scroll Snap Start-->
+            <div class="parent">
+                <!--First element within scroll snap-->
+                <li class="snap">
+                    <!--Individual containers within each scroll snap element with transition style classes-->
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">About Me</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        My name is Justin Park and I am a Junior at Boston College studying Computer Science.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Image-->
+                        <div class="container_outer_img">
+                            <img src='BC_Selfie.jpg'  alt="" class="container_img"/>
+                        </div>
+                    </div>
+                </li>
+                <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">Computer Science</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks:</div>
+                                        <div class="p" width="25">Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)</div>
+                                        <div class="p">I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.</div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
         <div>
             <hr class="solid">
             <!--Links to different social media-->
