scroll snap bug

--- a/experience.html
+++ b/experience.html
@@ -78,6 +78,7 @@
                         </div>
                     </div>
                 </li>
+            </div>
         <div>
             <hr class="solid">
             <!--Links to different social media-->
