--- a/profile.html
+++ b/profile.html
@@ -135,7 +135,8 @@
                         </div>
                     </div>
                 </li>
-            <div>
+            </div>
+        <div>
             <hr class="solid">
             <!--Links to different social media-->
             <div class="center">
