--- a/projects.html
+++ b/projects.html
@@ -217,6 +217,7 @@
                         </div>
                     </div>
                 </li>
+            </div>
         <div>
             <hr class="solid">
             <!--Links to different social media-->
