--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
             <!--Insert line break-->
             <hr class="solid">
             <!--Scroll Snap Start-->
-            <div class="parent" style="backgroundColor: red;">
+            <div class="parent" style="background-color: red;">
                 <!--First element within scroll snap-->
                 <li class="snap">
                     <!--Individual containers within each scroll snap element with transition style classes-->
