--- a/profile.html
+++ b/profile.html
@@ -68,9 +68,8 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college. Since then, I have taken the following relevant courseworks:</div>
-                                        <div class="p" width="25">Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)</div>
-                                        <div class="p">I have also worked on several seperate programs and research, which are detailed in their respective sections in the website.</div>
+                                        <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college.</div>
+                                        <div class="p">I have worked on several seperate programs and research, which are detailed in their respective sections in the website.</div>
                                     </p>
                                 </div>
                             </div>
