--- a/profile.html
+++ b/profile.html
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="container_content">
-                            <img src='piano.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='piano.jpg'  alt="" class="container_img picture_resize1"/>
                             <img src='theatre.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
