profile info update

--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Vincenzo and Saiki K), play games of all kinds, and sing in the shower.
+                                        In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Daredevil and Vincenzo), play games of all kinds, and sing in the shower.
                                     </p>
                                 </div>
                             </div>
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
+                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee". I also worked odd jobs at Wendys, Tours Les Jours, and as a tutor.
                                     </p>
                                 </div>
                             </div>
