updated profile info

--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        My name is Justin Park and I am a Junior at Boston College studying Computer Science.
+                                        My name is Justin Park and I am a Junior at Boston College studying for a B.S. in Computer Science.
                                     </p>
                                 </div>
                             </div>
@@ -69,7 +69,7 @@
                                 <div class="hide_p">
                                     <p class="p">
                                         <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college.</div>
-                                        <div class="p">I have worked on several seperate programs and research, which are detailed in their respective sections in the website.</div>
+                                        <div class="p">I have worked on several seperate programs, which are detailed in their respective sections in the website.</div>
                                     </p>
                                 </div>
                             </div>
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <img src='jamie_ari.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='dogs.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
                 </li>
