--- a/experience.html
+++ b/experience.html
@@ -41,18 +41,27 @@
                             <div class="container_content_inner">
                                 <!--Title with text-->
                                 <div class="hide_title">
-                                    <h1 class = "title">About Me</h1>
+                                    <h1 class = "title">Relevant Coursework</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        My name is Justin Park and I am a Junior at Boston College studying Computer Science.
+                                        Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
-                            <img src='BC_Selfie.jpg'  alt="" class="container_img"/>
+                            <div class="hide_title">
+                                    <h1 class = "title">Technical Skills</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+•	Advanced in: Python, HTML, CSS, JavaScript, GitHub, React, and Flask
+•	Proficient in: Java, SQLite, GoDaddy, and CPanel
+•	Familiar with: React Native, C, Swift, Go, Firebase, Django, and Stata
+                                    </p>
+                                </div>
                         </div>
                     </div>
                 </li>
