--- a/profile.html
+++ b/profile.html
@@ -64,6 +64,67 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
+                                    <h1 class = "title">Technical Skills</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college.</div>
+                                        <div class="p">I have worked on several seperate programs, which are detailed in their respective sections in the website.</div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="snap">
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">Relevant Coursework</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        Coursework that I have taken relevant to my area of study is: Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)                                      </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container_outer_img">
+                            <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
+                    </div>
+                </li>
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <img src='cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">Young</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee". I also worked odd jobs at Wendys, Tours Les Jours, and as a tutor.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container_content">
+                            <img src='piano.jpg'  alt="" class="container_img picture_resize1"/>
+                            <img src='theatre.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
+                    </div>
+                </li>
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
                                     <h1 class = "title">Computer Science</h1>
                                 </div>
                                 <div class="hide_p">
